[package]
name = "proof_viz"
version = "0.1.0"
authors = ["Hendrik Eeckhaut <hendrik@eeckhaut.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
js-sys = "0.3"
yew = { version = "0.21.0", features = ["csr"] }
base64 = "0.21.2"
gloo = "0.10.0"
serde_json = "1.0.107"
chrono = "0.4.31"
p256 = { version = "0.13", features = ["ecdsa"] }
elliptic-curve = { version = "0.13.5", features = ["pkcs8"] }
webpki-roots = "0.25.2"
wasm-logger = "0.2.0"
web-time = "0.2"
spansy = { git = "https://github.com/sinui0/spansy", rev = "becb33d" }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", branch = "dev" }
wasm-bindgen = "0.2.89"

[patch.crates-io.ring]
git = "https://github.com/betrusted-io/ring-xous"
branch = "0.16.20-cleanup"

[dependencies.web-sys]
version = "0.3"
features = ["File", "DragEvent", "DataTransfer"]
